agregué un salto de linea para los document.write

--- a/parte1.html
+++ b/parte1.html
@@ -12,15 +12,15 @@
         let estudiante = true;
 
         console.log("Nombre", nombre);
-        document.write("Nombre", nombre);
+        document.write("\n Nombre", nombre);
 
         console.log("Edad", edad);
-        document.write("Edad", edad);
+        document.write("\n Edad", edad);
 
         console.log("Estudiante", estudiante);
-        document.write("Estudiante", estudiante);
+        document.write("\n Estudiante", estudiante);
 
-        
+
     </script>
 </body>
 </html>
