--- a/parte2.html
+++ b/parte2.html
@@ -25,8 +25,8 @@
         console.log("La multiplicación es igual a: ", multiplicación);
         document.write("La multiplicación es igual a: " ,multiplicación, "<br>")
 
-        console.log("La división es igual a: ", parseFloat(división));
-        document.write("La división es igual a: " ,parseFloat(división), "<br>");
+        console.log("La división es igual a: ", parseFloat(división.toFixed(3)));
+        document.write("La división es igual a: " ,parseFloat(división.toFixed(3)), "<br>");
 
         console.log("a es mayor que b ", a>b);
         document.write("a es mayor que b ", a>b, "<br>");
