--- a/parte-3.html
+++ b/parte-3.html
@@ -14,12 +14,12 @@
        let puede_conducir = mayor_edad && licencia;
 
        console.log("¿La persona puede conducir? ", puede_conducir);
-       document.write("¿La persona puede conducir? ", puede_conducir);
+       document.write("¿La persona puede conducir? ", puede_conducir, "<br>");
 
        let si_puede_conducir = mayor_edad || licencia;
 
        console.log("¿Puede conducir con errores? ", si_puede_conducir);
-        document.write("¿Puede conducir? ", si_puede_conducir);
+        document.write("¿Puede conducir? ", si_puede_conducir, "<br>");
 
     </script>
     
